logs/Slang/generated/hdlconv/hdlconvertor_p782.sv.log
name: hdlconvertor_p782
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p782.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p782.sv:2:8: error: unknown package 'q'
import q::*;
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p782.sv:5:8: error: unknown package 'p'
import p::c;
       ^
